--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@lightspeed/flame": "^1.2.4",
+    "babel-plugin-styled-components": "^1.10.6",
     "emotion-theming": "^10.0.19",
-    "gatsby": "^2.17.6",
+    "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-postcss": "^2.1.16",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^3.0.1",
     "prop-types": "^15.7.2",
