--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emotion-theming": "^10.0.19",
     "gatsby": "^2.18.17",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-postcss": "^2.1.16",
