--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@lightspeed/flame": "^1.2.4",
+    "@mkitio/gatsby-theme-password-protect": "^2.1.1",
     "babel-plugin-styled-components": "^1.10.6",
     "emotion-theming": "^10.0.19",
     "gatsby": "^2.18.17",
