Add blog as MDX and make responsive layouts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@lightspeed/flame": "^1.2.4",
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
     "@mkitio/gatsby-theme-password-protect": "^2.1.1",
     "babel-plugin-styled-components": "^1.10.6",
     "emotion-theming": "^10.0.19",
@@ -15,7 +17,9 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-manifest": "^2.2.25",
+    "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-page-creator": "^2.1.38",
     "gatsby-plugin-postcss": "^2.1.16",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.34",
@@ -25,11 +29,13 @@
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^3.0.1",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
+    "rebass": "^4.0.7",
     "simple-flexbox": "^2.3.0",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2",
