--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-transition-link": "^1.16.2",
+    "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.1",
