--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@carbon/elements": "^10.9.2",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@lightspeed/flame": "^1.2.4",
@@ -42,7 +43,8 @@
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2",
     "typeface-inter": "^3.10.0",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
